--- a/Styles/style.css
+++ b/Styles/style.css
@@ -122,10 +122,15 @@
 .section-hot-Deal{
     border-radius: 8px;
     background: rgba(229, 84, 115, 0.05);
-    height: 600px;
+    height: 450px;
     display:flex ;
     justify-content: space-around;
     align-items: center;
+    padding: 100px 400px;
+    gap:180px;
+}
+.hot-deal-info{
+    text-align: center;
 }
 .hot-deal-img{
     width: 318px;
@@ -134,6 +139,17 @@
 .hot-deal-title{
     color: #272727;
     font-family: 'Lato', sans-serif;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 800;
+}
+.hot-deal-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 25px;
+}
+#font-style{
+    color:#E55473 ;
 }
