--- a/Styles/style.css
+++ b/Styles/style.css
@@ -159,6 +159,7 @@
     align-items: center;
     background-color: #FFF;;
     padding:50px 200px 0px 200px ;
+    margin-bottom:120px ;
 }
 .instagram-title{
     text-align: center;
@@ -176,4 +177,42 @@
     font-weight: 400;
     margin-top: 25px;
     
+}
+
+.section-input{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:400px ;
+    border-radius: 8px;
+    background-image: url('/Styles/Flower Asset/bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0px 200px;
+}
+.input-title{
+    color: #272727;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+}
+.input-description{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 15px;
+}
+
+.email-tag{
+    border: none;
+    border-radius: 8px;
+    background: #FFF;
+    width: 700px;
+    height: 65px;
+    margin-right:15px ;
+
 }
