--- a/Styles/style.css
+++ b/Styles/style.css
@@ -185,7 +185,7 @@
     align-items: center;
     height:500px ;
     border-radius: 8px;
-    background-image: url('/Styles/Flower Asset/bg.png');
+    background-image: url('/Flower Asset/Rectangle\ 9.png');
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0px 200px 120px 200px;
