--- a/Styles/style.css
+++ b/Styles/style.css
@@ -151,6 +151,41 @@
 .font-style{
     color:#E55473 ;
 }
+.facebook-conteiner1{
+    border-right: 5px solid purple;
+    padding-right: 150px;
+}
+
+.facebook-main-conteiner{
+    height: 800px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 200px ;
+}
+.facebook-title{
+    color: #272727;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+    margin: 80px 0px 30px 0px;
+    
+}
+.facebook-description{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.facebook-conteiner-img{
+    width: 300px;
+    height: 300px;
+    border-radius:8px ;
+}
+
 
 .instagram-img-conteiner{
     display: flex;
@@ -166,7 +201,8 @@
     font-family: 'Lato', sans-serif;
     font-size: 40px;
     font-weight: 800;
-    margin-top: 120px;
+    margin-top: 60px;
+    margin-bottom:35px ;
 }
 .instagram-description{
     color: rgba(39, 39, 39, 0.60);
